OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Sun Jan 30 08:49:24 2022
	+ Normalize licensing text, acknowledgements, and copyright statements
	+ Normalize macro defines and conditional if/ifdef/ifndef's with `cppi`
	+ Add support for building on FreeBSD; tested on 13.0-RELEASE-p6/ARM64
	+ Minor code clean-up
	+ Drop memmove wrapper macro (for old systems with bcopy but no memmove)
	+ Add support for building with musl libc
	+ Add `imctrl` and `imkey` options, inspired by `cannactrl` and `fepkey`
	  options in `nvi-m17n` by itojun. If `imctrl` option is set, the input
	  method is controlled by using escape sequences compatible with Tera
	  Term and RLogin. The state of the input method in commands specified
	  by imkey option is saved and restored automatically. This input method
	  is deactivated upon returning to command mode; this implementation
	  taken from NetBSD-current's `contrib/nvi`
	+ Improve `make` output and use more logical compilation order
	+ Add `virecover.8` man page adapted from NetBSD
	+ Add a missing break in `common/log.c`
	+ Avoid undefined behavior in `*BIT` macros; patch from NetBSD; also
	  apply patch from NetBSD for PR bin/52716
	+ Update `.gitignore` and `.gitattributes`

OpenVi 7.0.6 -> OpenVi 7.0.7: Fri Jan 28 16:33:22 2022
	+ Important fix to `GNUmakefile` for linking with Clang's `lld` linker
	+ Remove installed man pages as part of the `uninstall` target
	+ Workaround to accommodate the case of `make clean all -j N' when `N` > 1
	+ Clean-up whitespace and line lengths of sources and `GNUmakefile`

OpenVi 7.0.5 -> OpenVi 7.0.6: Thu Jan 27 16:45:12 2022
	+ Important fix for back-end database file locking; also, switch
	  back to using the system libc-provided mkstemp functions to elide
	  some issues that would otherwise occur on networked filesystems.
	+ Add proper attribution for DragonflyBSD Project to `LICENSE` text
	+ Correct `GNUmakefile` non-verbose messages for the `install` target