@@ -1,4 +1,5 @@
-OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Sun Jan 30 08:49:24 2022
+OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Sun Jan 30 10:30:08 2022
+	+ Add support for building on OpenBSD; tested on 7.0-current/ARM64
 	+ Normalize licensing text, acknowledgements, and copyright statements
 	+ Normalize macro defines and conditional if/ifdef/ifndef's with `cppi`
 	+ Add support for building on FreeBSD; tested on 13.0-RELEASE-p6/ARM64
